@@ -152,7 +152,9 @@ including \fBmu\fR without any command.
 .TP
 \fB\-\-muhome\fR
 causes \fBmu\fR to use an alternative directory to
-store and read its database and logs. By default, \fI~/.mu\fR is used.
+store and read its database and logs. By default, \fBmu\fR uses
+whatever the \fBMU_HOME\fR environment variable is set to; if it is
+not set, \fI~/.mu\fR is used.
 
 .TP
 \fB\-d\fR, \fB\-\-debug\fR
