@@ -23,7 +23,9 @@ toolbar.
 
 .TP
 \fB\-\-muhome\fR causes \fBmug\fR to use an alternative directory to read its
-database and bookmarks and write its logs. By default, \fI~/.mu\fR is used.
+database and bookmarks and write its logs. By default, \fBmug\fR uses
+whatever the \fBMU_HOME\fR environment variable is set to; if it is
+not set, \fI~/.mu\fR is used.
 
 .SH BUGS
 Please report bugs if you find them:
